--- a/.github/workflows/content-web.yml
+++ b/.github/workflows/content-web.yml
@@ -1,4 +1,4 @@
-#me: content-web
+name: content-web
 
 # This workflow is triggered on push to the 'content-web' directory of the  main branch of the repository
 on:
@@ -40,6 +40,15 @@ jobs:
         password: ${{ secrets.ACR_PASSWORD }}
 
     - name: Build and push an image to container registry
+      uses: docker/build-push-action@v2
+      with:
+        context: ${{ env.dockerfilePath  }}
+        file: "${{ env.dockerfilePath }}/Dockerfile"
+        pull: true
+        push: true
+        tags: |
+          ${{ env.containerRegistry }}/${{ env.imageRepository }}:${{ env.tag }}
+          ${{ env.containerRegistry }}/${{ env.imageRepository }}:latestBuild and push an image to container registry
       uses: docker/build-push-action@v2
       with:
         context: ${{ env.dockerfilePath  }}
